# vrfcd

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: test_vrfcd.py
src/vrfcd/: __init__.py  communities.py  distance.py  graph.py  kernels.py  pipeline.py  plotting.py
tests/: test_kernels.py  test_pipeline.py
