[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrfcd"
version = "0.1.1"
description = "van Rossum distance based functional community detection for spike trains"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Indranil Ghosh", email = "indranilg49@gmail.com"}
]
license = {text = "MIT"}
keywords = [
    "computational-neuroscience",
    "spike-trains",
    "van-rossum-distance",
    "functional-connectivity",
    "community-detection",
    "network-science"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "networkx",
    "joblib",
    "scikit-learn"
]

[project.optional-dependencies]
leiden = [
    "igraph",
    "leidenalg"
]
dev = [
    "pytest",
    "black",
    "ruff",
    "jupyter"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/indrag49/vrfcd"
Repository = "https://github.com/indrag49/vrfcd"
Issues = "https://github.com/indrag49/vrfcd/issues"
